# gagaga

./: Cargo.toml  README.md  manutest.md  rustfmt.toml
front/: next.config.js  package-lock.json  package.json
src/: api.rs  app.rs  basicfe.rs  browse.rs  cachethumb.rs  domain.rs  domainprim copy.rs  domainprim.rs  fs.rs  index.html  list.rs  main.rs  prim.rs  primitive.rs  scripts.js  styles.css  thcache.rs  thumb.rs  vfs.rs  vfsa.rs  vfspanic.rs
templates/: basic.html  directory.stpl  scripts.js  statcode.html
