[package]
name = "gagaga"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.5"
async-trait = "0.1.68"
axum = { version = "0.6.16", features = ["macros"] }
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
mime_guess = "2.0.4"
rand = "0.8.5"
sailfish = "0.6.1"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["serde-well-known", "parsing", "formatting"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.release]
lto = "thin"
overflow-checks = true
